Sass styles for all pages

--- a/registration.html
+++ b/registration.html
@@ -7,11 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Brand – Registration</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900">
-    <link rel="stylesheet" href="phone.css">
-    <link rel="stylesheet" href="tablet.css">
-    <link rel="stylesheet" href="desktop.css">
-    <link rel="stylesheet" href="cart.css">
-    <link rel="stylesheet" href="reg.css">
+    <link rel="stylesheet" href="styles/reg.css">
 
     <svg width="17" height="10" fill="none" xmlns="http://www.w3.org/2000/svg" style="display: none;">
         <symbol id="join-arrow-icon" viewBox="0 0 17 10">
