--- a/cart.html
+++ b/cart.html
@@ -7,10 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Brand – Cart</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900">
-    <link rel="stylesheet" href="phone.css">
-    <link rel="stylesheet" href="tablet.css">
-    <link rel="stylesheet" href="desktop.css">
-    <link rel="stylesheet" href="cart.css">
+    <link rel="stylesheet" href="styles/cart.css">
 </head>
 
 <body>
