--- a/product.html
+++ b/product.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Brand – Product</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900">
-    <link rel="stylesheet" href="phone.css">
+    <!-- <link rel="stylesheet" href="phone.css">
     <link rel="stylesheet" href="tablet.css">
     <link rel="stylesheet" href="desktop.css">
     <link rel="stylesheet" href="catalog.css">
-    <link rel="stylesheet" href="product.css">
+    <link rel="stylesheet" href="product.css"> -->
+    <link rel="stylesheet" href="styles/product.css">
 
     <svg width="33" height="29" fill="none" xmlns="http://www.w3.org/2000/svg" style="display: none;">
         <symbol id="cart-icon" viewBox="0 0 33 29">
