Improve styles for main page (+BEM)

--- a/index.html
+++ b/index.html
@@ -78,42 +78,42 @@
 
     <section class="growstopper">
         <div class="prop">
-            <div class="prop__item">
-                <div class="prop__card bkg_woman">
+            <div class="prop-item">
+                <div class="prop-card bkg-woman">
                     <a href="#">
-                        <div class="prop__item__text">
-                            <div class="prop__item__text__uppart">30% off</div>
-                            <div class="prop__item__text__downpart">for women</div>
+                        <div class="prop-item-text">
+                            <div class="prop-item-text-uppart">30% off</div>
+                            <div class="prop-item-text-downpart">for women</div>
                         </div>
                     </a>
                 </div>
             </div>
-            <div class="prop__item">
-                <div class="prop__card bkg_man">
+            <div class="prop-item">
+                <div class="prop-card bkg-man">
                     <a href="#">
-                        <div class="prop__item__text">
-                            <div class="prop__item__text__uppart">hot deal</div>
-                            <div class="prop__item__text__downpart">for men</div>
+                        <div class="prop-item-text">
+                            <div class="prop-item-text-uppart">hot deal</div>
+                            <div class="prop-item-text-downpart">for men</div>
                         </div>
                     </a>
                 </div>
             </div>
-            <div class="prop__item">
-                <div class="prop__card bkg_kid">
+            <div class="prop-item">
+                <div class="prop-card bkg-kid">
                     <a href="#">
-                        <div class="prop__item__text">
-                            <div class="prop__item__text__uppart">new arrivals</div>
-                            <div class="prop__item__text__downpart">for kids</div>
+                        <div class="prop-item-text">
+                            <div class="prop-item-text-uppart">new arrivals</div>
+                            <div class="prop-item-text-downpart">for kids</div>
                         </div>
                     </a>
                 </div>
             </div>
-            <div class="prop__item_longcard">
-                <div class="prop__longcard bkg_categories">
+            <div class="prop-item prop-item_longcard">
+                <div class="prop-longcard bkg-categories">
                     <a href="#">
-                        <div class="prop__item__text">
-                            <div class="prop__item__text__uppart">luxirous & trendy</div>
-                            <div class="prop__item__text__downpart">accesories</div>
+                        <div class="prop-item-text">
+                            <div class="prop-item-text-uppart">luxirous & trendy</div>
+                            <div class="prop-item-text-downpart">accesories</div>
                         </div>
                     </a>
                 </div>
@@ -252,24 +252,24 @@
             <div class="growstopper">
                 <div class="upfooter">
                     <a href="#">
-                        <div class="upfooter__item">
-                            <img src="img/delivery.svg" alt="delivery" class="upfooter__item__img">
-                            <div class="upfooter__item__header">Free Delivery</div>
-                            <div class="upfooter__item__text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</div>
+                        <div class="upfooter-item">
+                            <img src="img/delivery.svg" alt="delivery" class="upfooter-item-img">
+                            <div class="upfooter-item-header">Free Delivery</div>
+                            <div class="upfooter-item-text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</div>
                         </div>
                     </a>
                     <a href="#">
-                        <div class="upfooter__item">
-                            <img src="img/discounts.svg" alt="discounts" class="upfooter__item__img">
-                            <div class="upfooter__item__header second-item-header">Sales & discounts</div>
-                            <div class="upfooter__item__text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</div>
+                        <div class="upfooter-item">
+                            <img src="img/discounts.svg" alt="discounts" class="upfooter-item-img">
+                            <div class="upfooter-item-header second-item-header">Sales & discounts</div>
+                            <div class="upfooter-item-text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</div>
                         </div>
                     </a>
                     <a href="#">
-                        <div class="upfooter__item">
-                            <img src="img/crown.svg" alt="crown" class="upfooter__item__img">
-                            <div class="upfooter__item__header third-item-header">Quality assurance</div>
-                            <div class="upfooter__item__text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</div>
+                        <div class="upfooter-item">
+                            <img src="img/crown.svg" alt="crown" class="upfooter-item-img">
+                            <div class="upfooter-item-header third-item-header">Quality assurance</div>
+                            <div class="upfooter-item-text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</div>
                         </div>
                     </a>
                 </div>
@@ -277,17 +277,17 @@
         </div>
         <div class="midfootersec_bkg">
             <div class="megastopper">
-                <div class="midfooter_container">
+                <div class="midfooter-container">
                     <div class="midfooter growstopper">
-                        <figure class="midfooter__topcontainer">
-                            <img src="img/footerphoto.png" alt="footerphoto" class="midfooter__img">
-                            <figcaption class="midfooter__subpictext">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <em>a pulvinar purus condimentum</em>“</figcaption>
+                        <figure class="midfooter-topcontainer">
+                            <img src="img/footerphoto.png" alt="footerphoto" class="midfooter-img">
+                            <figcaption class="midfooter-subpictext">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <em>a pulvinar purus condimentum</em>“</figcaption>
                         </figure>
-                        <form action="#" class="midfooter__form">
-                            <div class="form__header">subscribe</div>
-                            <div class="form__subheader">for our newletter and promotion</div>
-                            <input type="email" class="form__input" placeholder="Enter Your Email">
-                            <input type="submit" value="Subscribe" class="form__subscribe">
+                        <form action="#" class="midfooter-form">
+                            <div class="form-header">subscribe</div>
+                            <div class="form-subheader">for our newletter and promotion</div>
+                            <input type="email" class="form-input" placeholder="Enter Your Email">
+                            <input type="submit" value="Subscribe" class="form-subscribe">
                         </form>
                     </div>
                 </div>
