Update pages for new main styles

--- a/catalog.html
+++ b/catalog.html
@@ -390,24 +390,24 @@
             <div class="growstopper">
                 <div class="upfooter">
                     <a href="#">
-                        <div class="upfooter__item">
-                            <img src="img/delivery.svg" alt="delivery" class="upfooter__item__img">
-                            <div class="upfooter__item__header">Free Delivery</div>
-                            <div class="upfooter__item__text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</div>
+                        <div class="upfooter-item">
+                            <img src="img/delivery.svg" alt="delivery" class="upfooter-item-img">
+                            <div class="upfooter-item-header">Free Delivery</div>
+                            <div class="upfooter-item-text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</div>
                         </div>
                     </a>
                     <a href="#">
-                        <div class="upfooter__item">
-                            <img src="img/discounts.svg" alt="discounts" class="upfooter__item__img">
-                            <div class="upfooter__item__header second-item-header">Sales & discounts</div>
-                            <div class="upfooter__item__text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</div>
+                        <div class="upfooter-item">
+                            <img src="img/discounts.svg" alt="discounts" class="upfooter-item-img">
+                            <div class="upfooter-item-header second-item-header">Sales & discounts</div>
+                            <div class="upfooter-item-text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</div>
                         </div>
                     </a>
                     <a href="#">
-                        <div class="upfooter__item">
-                            <img src="img/crown.svg" alt="crown" class="upfooter__item__img">
-                            <div class="upfooter__item__header third-item-header">Quality assurance</div>
-                            <div class="upfooter__item__text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</div>
+                        <div class="upfooter-item">
+                            <img src="img/crown.svg" alt="crown" class="upfooter-item-img">
+                            <div class="upfooter-item-header third-item-header">Quality assurance</div>
+                            <div class="upfooter-item-text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</div>
                         </div>
                     </a>
                 </div>
@@ -415,17 +415,17 @@
         </div>
         <div class="midfootersec_bkg">
             <div class="megastopper">
-                <div class="midfooter_container">
+                <div class="midfooter-container">
                     <div class="midfooter growstopper">
-                        <figure class="midfooter__topcontainer">
-                            <img src="img/footerphoto.png" alt="footerphoto" class="midfooter__img">
-                            <figcaption class="midfooter__subpictext">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <em>a pulvinar purus condimentum</em>“</figcaption>
+                        <figure class="midfooter-topcontainer">
+                            <img src="img/footerphoto.png" alt="footerphoto" class="midfooter-img">
+                            <figcaption class="midfooter-subpictext">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <em>a pulvinar purus condimentum</em>“</figcaption>
                         </figure>
-                        <form action="#" class="midfooter__form">
-                            <div class="form__header">subscribe</div>
-                            <div class="form__subheader">for our newletter and promotion</div>
-                            <input type="email" class="form__input" placeholder="Enter Your Email">
-                            <input type="submit" value="Subscribe" class="form__subscribe">
+                        <form action="#" class="midfooter-form">
+                            <div class="form-header">subscribe</div>
+                            <div class="form-subheader">for our newletter and promotion</div>
+                            <input type="email" class="form-input" placeholder="Enter Your Email">
+                            <input type="submit" value="Subscribe" class="form-subscribe">
                         </form>
                     </div>
                 </div>
