--- a/product.html
+++ b/product.html
@@ -7,11 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Brand – Product</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900">
-    <!-- <link rel="stylesheet" href="phone.css">
-    <link rel="stylesheet" href="tablet.css">
-    <link rel="stylesheet" href="desktop.css">
-    <link rel="stylesheet" href="catalog.css">
-    <link rel="stylesheet" href="product.css"> -->
     <link rel="stylesheet" href="styles/product.css">
 
     <svg width="33" height="29" fill="none" xmlns="http://www.w3.org/2000/svg" style="display: none;">
@@ -191,17 +186,17 @@
     <footer>
         <div class="midfootersec_bkg">
             <div class="megastopper">
-                <div class="midfooter_container">
+                <div class="midfooter-container">
                     <div class="midfooter growstopper">
-                        <figure class="midfooter__topcontainer">
-                            <img src="img/footerphoto.png" alt="footerphoto" class="midfooter__img">
-                            <figcaption class="midfooter__subpictext">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <em>a pulvinar purus condimentum</em>“</figcaption>
+                        <figure class="midfooter-topcontainer">
+                            <img src="img/footerphoto.png" alt="footerphoto" class="midfooter-img">
+                            <figcaption class="midfooter-subpictext">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <em>a pulvinar purus condimentum</em>“</figcaption>
                         </figure>
-                        <form action="#" class="midfooter__form">
-                            <div class="form__header">subscribe</div>
-                            <div class="form__subheader">for our newletter and promotion</div>
-                            <input type="email" class="form__input" placeholder="Enter Your Email">
-                            <input type="submit" value="Subscribe" class="form__subscribe">
+                        <form action="#" class="midfooter-form">
+                            <div class="form-header">subscribe</div>
+                            <div class="form-subheader">for our newletter and promotion</div>
+                            <input type="email" class="form-input" placeholder="Enter Your Email">
+                            <input type="submit" value="Subscribe" class="form-subscribe">
                         </form>
                     </div>
                 </div>
