--- a/registration.html
+++ b/registration.html
@@ -123,17 +123,17 @@
     <footer>
         <div class="midfootersec_bkg">
             <div class="megastopper">
-                <div class="midfooter_container">
+                <div class="midfooter-container">
                     <div class="midfooter growstopper">
-                        <figure class="midfooter__topcontainer">
-                            <img src="img/footerphoto.png" alt="footerphoto" class="midfooter__img">
-                            <figcaption class="midfooter__subpictext">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <em>a pulvinar purus condimentum</em>“</figcaption>
+                        <figure class="midfooter-topcontainer">
+                            <img src="img/footerphoto.png" alt="footerphoto" class="midfooter-img">
+                            <figcaption class="midfooter-subpictext">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <em>a pulvinar purus condimentum</em>“</figcaption>
                         </figure>
-                        <form action="#" class="midfooter__form">
-                            <div class="form__header">subscribe</div>
-                            <div class="form__subheader">for our newletter and promotion</div>
-                            <input type="email" class="form__input" placeholder="Enter Your Email">
-                            <input type="submit" value="Subscribe" class="form__subscribe">
+                        <form action="#" class="midfooter-form">
+                            <div class="form-header">subscribe</div>
+                            <div class="form-subheader">for our newletter and promotion</div>
+                            <input type="email" class="form-input" placeholder="Enter Your Email">
+                            <input type="submit" value="Subscribe" class="form-subscribe">
                         </form>
                     </div>
                 </div>
