Fix product page and upgrade cart page

--- a/product.html
+++ b/product.html
@@ -40,9 +40,11 @@
         </nav>
         <nav class="breadcrumb-bkg menu-anchor">
             <div class="growstopper">
-                <div class="breadcrumb">
-                    <div class="breadcrumb-leftpart">NEW ARRIVALS</div>
-                    <div class="breadcrumb-rightpart">HOME / MEN / <span class="breadcrumb-current">NEW ARRIVALS</span></div>
+                <div class="breadcrumb-content">
+                    <div class="breadcrumb">
+                        <div class="breadcrumb-leftpart">NEW ARRIVALS</div>
+                        <div class="breadcrumb-rightpart">HOME / MEN / <span class="breadcrumb-current">NEW ARRIVALS</span></div>
+                    </div>
                 </div>
             </div>
             <nav class="menu-off" id="mainMenu">
