--- a/cart.html
+++ b/cart.html
@@ -8,32 +8,38 @@
     <title>The Brand – Cart</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900">
     <link rel="stylesheet" href="styles/cart.css">
+    <!-- Для вёрстки по картинке: вставить в конец head -->
+    <link rel="stylesheet" href="test/test.css">
 </head>
 
 <body>
     <header>
         <nav class="top-bkg">
             <div class="growstopper">
-                <div class="top-menu">
-                    <div class="leftpart">
-                        <a href="index.html"><img src="img/logo.png" alt="logo" class="logopic"></a>
-                        <img src="img/mglass.svg " alt="mglass" class="mgpic">
-                    </div>
-                    <div class="rightpart">
-                        <img src="img/menu-btn-pic.svg " alt="menu-btn-pic" class="desktop_mod" onclick="openMenu()">
-                        <a href="registration.html"><img src="img/people.svg " alt="people" class="no-phone no-phone_pic desktop_mod"></a>
-                        <a href="cart.html" class="cart">
-                            <img src="img/cart.svg " alt="cart" class="no-phone no-phone_pic">
-                            <div class="goods no-phone">5</div>
-                        </a>
+                <div class="top-content">
+                    <div class="top-menu">
+                        <div class="leftpart">
+                            <a href="index.html"><img src="img/logo.png" alt="logo" class="logopic"></a>
+                            <img src="img/mglass.svg " alt="mglass" class="mgpic">
+                        </div>
+                        <div class="rightpart">
+                            <img src="img/menu-btn-pic.svg " alt="menu-btn-pic" class="desktop_mod" onclick="openMenu()">
+                            <a href="registration.html"><img src="img/people.svg " alt="people" class="no-phone no-phone_pic desktop_mod"></a>
+                            <a href="cart.html" class="cart">
+                                <img src="img/cart.svg " alt="cart" class="no-phone no-phone_pic">
+                                <div class="goods no-phone">5</div>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
         </nav>
         <nav class="breadcrumb-bkg menu-anchor">
             <div class="growstopper">
-                <div class="breadcrumb">
-                    <div class="breadcrumb-leftpart">SHOPPING CART</div>
+                <div class="breadcrumb-content">
+                    <div class="breadcrumb">
+                        <div class="breadcrumb-leftpart">SHOPPING CART</div>
+                    </div>
                 </div>
             </div>
             <nav class="menu-off" id="mainMenu">
@@ -69,39 +75,39 @@
         </nav>
     </header>
 
-    <section class="shopping-content-bkg">
+    <section>
         <div class="growstopper">
-            <div class="shopping-content">
+            <div class="cartpage-content">
                 <div class="cardbox">
-                    <div class="shopping-card">
+                    <div class="shoppingcard">
                         <img src="img/pic3.jpeg" alt="pic3" class="card-pic">
                         <div class="text-box">
-                            <p class="card-header">MANGO PEOPLE T-SHIRT</p>
+                            <p class="card-header">MANGO PEOPLE<br> T-SHIRT</p>
                             <p class="card-data">
                                 Price: <span class="price-span">$300</span><br> Color: <span class="color-span">Red</span><br> Size: <span class="size-span">Xl</span><br> Quantity:
                                 <input type="text" class="product-count" id="product1-count" value="2" pattern="[0-9]*">
                             </p>
-                        </div>
-                        <div class="card-close">
-                            <a href="#"><img src="img/close-btn-face.svg" alt="close" class="card-close-img"></a>
+                            <div class="card-close">
+                                <a href="#"><img src="img/close-btn-face.svg" alt="close" class="card-close-img"></a>
+                            </div>
                         </div>
                     </div>
-                    <div class="shopping-card">
+                    <div class="shoppingcard">
                         <img src="img/pic11.jpeg" alt="pic11" class="card-pic">
                         <div class="text-box">
-                            <p class="card-header">MANGO PEOPLE T-SHIRT</p>
+                            <p class="card-header">MANGO PEOPLE<br> T-SHIRT</p>
                             <p class="card-data">
                                 Price: <span class="price-span">$300</span><br> Color: <span class="color-span">Red</span><br> Size: <span class="size-span">Xl</span><br> Quantity:
                                 <input type="text" class="product-count" id="product2-count" value="2">
                             </p>
-                        </div>
-                        <div class="card-close">
-                            <a href="#"><img src="img/close-btn-face.svg" alt="close" class="card-close-img"></a>
+                            <div class="card-close">
+                                <a href="#"><img src="img/close-btn-face.svg" alt="close" class="card-close-img"></a>
+                            </div>
                         </div>
                     </div>
-                    <div class="shopping-buttons">
-                        <a href="#" class="shopping-btn">CLEAR SHOPPING CART</a>
-                        <a href="catalog.html" class="shopping-btn">CONTINUE SHOPPING</a>
+                    <div class="cardbox-buttons">
+                        <a href="#" class="cardbox-btn">Clear shopping cart</a>
+                        <a href="catalog.html" class="cardbox-btn">Continue shopping</a>
                     </div>
                 </div>
                 <div class="countblock">
@@ -177,6 +183,8 @@
             </div>
         </div>
     </footer>
+    <!-- Для вёрстки по картинке: вставить в конец body 
+    <img src="test/cart-768.png" alt="" class="test-img"> -->
     <script>
         function openMenu() {
             document.getElementById("mainMenu").className = "menu-on";
