Fix issues from lesson 2, plus breadcrumbs and reg page. Validate HTML

--- a/cart.html
+++ b/cart.html
@@ -73,12 +73,14 @@
         </nav>
     </header>
 
-    <section class="growstopper">
+    <div class="growstopper">
         <div class="cartblock-content">
             <div class="cartblock">
-                <section class="cardbox">
+                <div class="cardbox">
                     <div class="cardbox-card">
-                        <img src="img/pic3.jpeg" alt="pic3" class="card-picture">
+                        <a href="product.html" class="prod-link">
+                            <img src="img/pic3.jpeg" alt="pic3" class="card-picture">
+                        </a>
                         <div class="textbox">
                             <p class="card-header">MANGO PEOPLE<br> T-SHIRT</p>
                             <p class="card-data">
@@ -91,7 +93,9 @@
                         </div>
                     </div>
                     <div class="cardbox-card">
-                        <img src="img/pic11.jpeg" alt="pic11" class="card-picture">
+                        <a href="product.html" class="prod-link">
+                            <img src="img/pic11.jpeg" alt="pic11" class="card-picture">
+                        </a>
                         <div class="textbox">
                             <p class="card-header">MANGO PEOPLE<br> T-SHIRT</p>
                             <p class="card-data">
@@ -107,7 +111,7 @@
                         <a href="#" class="cardbox-btn">Clear shopping cart</a>
                         <a href="catalog.html" class="cardbox-btn">Continue shopping</a>
                     </div>
-                </section>
+                </div>
                 <div class="formbox">
                     <form action="#" class="address-form">
                         <h2 class="address-form-header">SHIPPING ADRESS</h2>
@@ -130,7 +134,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
     <footer>
         <div class="midfootersec_bkg">
