--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
     </header>
 
-    <section class="growstopper">
+    <div class="growstopper">
         <div class="prop">
             <div class="prop-item">
                 <div class="prop-card bkg-woman">
@@ -118,7 +118,8 @@
                     </a>
                 </div>
             </div>
-    </section>
+        </div>
+    </div>
 
     <section class="growstopper">
         <div class="featured-items-header">
