--- a/product.html
+++ b/product.html
@@ -8,7 +8,9 @@
     <title>The Brand – Product</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900">
     <link rel="stylesheet" href="styles/product.css">
+</head>
 
+<body>
     <svg width="33" height="29" fill="none" xmlns="http://www.w3.org/2000/svg" style="display: none;">
         <symbol id="cart-icon" viewBox="0 0 33 29">
             <title>cart-icon</title>
@@ -16,9 +18,6 @@
         </symbol>
     </svg>
 
-</head>
-
-<body>
     <header>
         <nav class="top-bkg">
             <div class="growstopper">
@@ -43,7 +42,11 @@
                 <div class="breadcrumb-content">
                     <div class="breadcrumb">
                         <div class="breadcrumb-leftpart">NEW ARRIVALS</div>
-                        <div class="breadcrumb-rightpart">HOME / MEN / <span class="breadcrumb-current">NEW ARRIVALS</span></div>
+                        <div class="breadcrumb-rightpart">
+                            <a href="index.html" class="breadcrumb-link">HOME</a> /
+                            <a href="catalog.html" class="breadcrumb-link">MEN</a> /
+                            <a href="catalog.html" class="breadcrumb-current">NEW ARRIVALS</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -80,11 +83,11 @@
         </nav>
     </header>
 
-    <section class="slideshow">
+    <div class="slideshow">
         <a href="#" class="slideshow-arrow"><img src="img/catalog-left-arrow.svg" alt="left arrow" class="left-arrow"></a>
         <img src="img/bigpic13.jpeg" alt="" class="slide">
         <a href="#" class="slideshow-arrow"><img src="img/catalog-left-arrow.svg" alt="" class="right-arrow"></a>
-    </section>
+    </div>
 
     <div class="container-for-floats">
         <section class="growstopper gs-floater">
@@ -122,7 +125,7 @@
             </div>
         </section>
 
-        <section class="growstopper">
+        <div class="growstopper">
             <div class="featured-items">
 
                 <div class="card-block">
@@ -182,7 +185,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
     </div>
 
     <footer>
