Fix responsive cart page & top menu

--- a/catalog.html
+++ b/catalog.html
@@ -23,13 +23,13 @@
             <div class="growstopper">
                 <div class="top-menu">
                     <div class="leftpart">
-                        <a href="index.html"><img src="img/logo.png" alt="logo" class="logopic"></a>
-                        <img src="img/mglass.svg " alt="mglass" class="mgpic">
+                        <a href="index.html"><img src="img/logo.png" alt="logo" class="logopic scalable"></a>
+                        <img src="img/mglass.svg " alt="mglass" class="mgpic scalable">
                     </div>
                     <div class="rightpart">
-                        <img src="img/menu-btn-pic.svg " alt="menu-btn-pic" class="desktop_mod" onclick="openMenu()">
-                        <a href="registration.html"><img src="img/people.svg " alt="people" class="no-phone no-phone_pic desktop_mod"></a>
-                        <a href="cart.html" class="cart">
+                        <img src="img/menu-btn-pic.svg " alt="menu-btn-pic" class="desktop_mod scalable" onclick="openMenu()">
+                        <a href="registration.html"><img src="img/people.svg " alt="people" class="no-phone no-phone_pic desktop_mod scalable"></a>
+                        <a href="cart.html" class="cart scalable">
                             <img src="img/cart.svg " alt="cart" class="no-phone no-phone_pic">
                             <div class="goods no-phone">5</div>
                         </a>
@@ -365,27 +365,26 @@
                 </div>
             </div>
         </div>
-    </div>
-
-    <div class="pagination">
-        <ul class="pagination-btns">
-            <li class="arrow">
-                <a href="#" class="pagination-link">
-                    <img src="img/catalog-left-arrow.svg" alt="" class="left-arrow">
-                </a>
-            </li>
-            <li class="page active-page"><a href="#" class="pagination-link">1</a></li>
-            <li class="page"><a href="#" class="pagination-link">2</a></li>
-            <li class="page"><a href="#" class="pagination-link">3</a></li>
-            <li class="page"><a href="#" class="pagination-link">4</a></li>
-            <li class="page"><a href="#" class="pagination-link">5</a></li>
-            <li class="page"><a href="#" class="pagination-link">6.....20</a></li>
-            <li class="arrow">
-                <a href="#" class="pagination-link">
-                    <img src="img/catalog-left-arrow.svg" alt="" class="right-arrow">
-                </a>
-            </li>
-        </ul>
+        <div class="pagination">
+            <ul class="pagination-btns">
+                <li class="arrow">
+                    <a href="#" class="pagination-link">
+                        <img src="img/catalog-left-arrow.svg" alt="" class="left-arrow">
+                    </a>
+                </li>
+                <li class="page"><a href="#" class="pagination-link">1</a></li>
+                <li class="page"><a href="#" class="pagination-link">2</a></li>
+                <li class="page"><a href="#" class="pagination-link">3</a></li>
+                <li class="page"><a href="#" class="pagination-link">4</a></li>
+                <li class="page"><a href="#" class="pagination-link">5</a></li>
+                <li class="page"><a href="#" class="pagination-link">6.....20</a></li>
+                <li class="arrow">
+                    <a href="#" class="pagination-link">
+                        <img src="img/catalog-left-arrow.svg" alt="" class="right-arrow">
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 
     <footer>
