--- a/registration.html
+++ b/registration.html
@@ -23,13 +23,13 @@
             <div class="growstopper">
                 <div class="top-menu">
                     <div class="leftpart">
-                        <a href="index.html"><img src="img/logo.png" alt="logo" class="logopic"></a>
-                        <img src="img/mglass.svg " alt="mglass" class="mgpic">
+                        <a href="index.html"><img src="img/logo.png" alt="logo" class="logopic scalable"></a>
+                        <img src="img/mglass.svg " alt="mglass" class="mgpic scalable">
                     </div>
                     <div class="rightpart">
-                        <img src="img/menu-btn-pic.svg " alt="menu-btn-pic" class="desktop_mod" onclick="openMenu()">
-                        <a href="registration.html"><img src="img/people.svg " alt="people" class="no-phone no-phone_pic desktop_mod"></a>
-                        <a href="cart.html" class="cart">
+                        <img src="img/menu-btn-pic.svg " alt="menu-btn-pic" class="desktop_mod scalable" onclick="openMenu()">
+                        <a href="registration.html"><img src="img/people.svg " alt="people" class="no-phone no-phone_pic desktop_mod scalable"></a>
+                        <a href="cart.html" class="cart scalable">
                             <img src="img/cart.svg " alt="cart" class="no-phone no-phone_pic">
                             <div class="goods no-phone">5</div>
                         </a>
